docs: add documentation in the Jupyter Notebook

--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -474,6 +474,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The meaning of the folllowing evaluation metrics:**\n",
+    "- **RMSE (Root Mean Squared Error):** It is a standard way to measure the error of a model in predicting quantitative data.\n",
+    "- **MAE (Mean Absolute Error):** It measures the average magnitude of the errors in a set of predictions, without considering their direction.\n",
+    "\n",
+    "**Note:**\n",
+    "- **Training RMSE and MAE:** Indicate how well the model is fitting the training data.\n",
+    "- **Test RMSE and MAE:** Show how well the model is expected to perform on unseen data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
