--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -237,7 +237,7 @@
     "  - **Prevents Data Loss:** Padding avoids truncating longer sequences, which might lose important information.\n",
     "  - **Facilitates Embeddings:** In deep learning, fixed-length sequences streamline the creation of consistent-dimensional embeddings for text tokens.\n",
     "\n",
-    "- **Note:** We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '<UNK>' in our data.\n",
+    "- **Note:** We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '&lt;UNK&gt;' in our data.\n",
     "\n",
     "- **tf.keras.preprocessing.sequence.pad_sequences:** To prepare the data, both the training and testing datasets are padded using a sequence length of 256, and any missing values are filled with zeros."
    ]
