--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -237,8 +237,6 @@
     "  - **Prevents Data Loss:** Padding avoids truncating longer sequences, which might lose important information.\n",
     "  - **Facilitates Embeddings:** In deep learning, fixed-length sequences streamline the creation of consistent-dimensional embeddings for text tokens.\n",
     "\n",
-    "- **Note:** We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '&lt;UNK&gt;' in our data.\n",
-    "\n",
     "- **tf.keras.preprocessing.sequence.pad_sequences:** To prepare the data, both the training and testing datasets are padded using a sequence length of 256, and any missing values are filled with zeros."
    ]
   },
@@ -315,8 +313,10 @@
     "  - There is a dense layer with 16 neurons using ReLU activation.\n",
     "  - The output layer is a single neuron with sigmoid activation, used for binary (positive/negative) classification.\n",
     "\n",
-    "- As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
-    "- The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
+    "- **Note:** \n",
+    "  - We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '&lt;UNK&gt;' in our data.\n",
+    "  - As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
+    "  - The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
    ]
   },
   {
