docs: modify documentation in the Jupyter Notebook

--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -293,7 +293,7 @@
     "- **Hints:**\n",
     "  - Investigate how NO2 levels change over time.\n",
     "  - Consider resampling the data (e.g., daily averages) if working with high granularity data.\n",
-    "  - Utilize libraries like Pandas for data manipulation, statsmodels for TensorFlow/Keras for LSTM.\n"
+    "  - Utilize libraries such as Pandas for data manipulation, TensorFlow and Keras for building LSTM models, and statsmodels for statistical analysis."
    ]
   },
   {
@@ -439,6 +439,7 @@
     "# Early stopping\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=5)\n",
     "\n",
+    "# Train the model\n",
     "model.fit(X_train, Y_train, epochs=100, batch_size=1, verbose=2, callbacks=[early_stopping], validation_split=0.3)"
    ]
   },
@@ -477,12 +478,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The meaning of the folllowing evaluation metrics:**\n",
+    "**The meaning of the following evaluation metrics:**\n",
     "- **RMSE (Root Mean Squared Error):** It is a standard way to measure the error of a model in predicting quantitative data.\n",
     "- **MAE (Mean Absolute Error):** It measures the average magnitude of the errors in a set of predictions, without considering their direction.\n",
     "\n",
     "**Note:**\n",
-    "- **Training RMSE and MAE:** Indicate how well the model is fitting the training data.\n",
+    "- **Training RMSE and MAE:** Indicate how well the model fits the training data.\n",
     "- **Test RMSE and MAE:** Show how well the model is expected to perform on unseen data."
    ]
   },
