--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -318,7 +318,8 @@
     "import numpy as np\n",
     "from keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import LSTM, Dense\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.regularizers import L1L2\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import matplotlib.pyplot as plt"
@@ -380,7 +381,7 @@
    "outputs": [],
    "source": [
     "# Split the data into train and test sets\n",
-    "train_size = int(len(scaled_no2) * 0.67)\n",
+    "train_size = int(len(scaled_no2) * 0.6)\n",
     "test_size = len(scaled_no2) - train_size\n",
     "train, test = scaled_no2[0:train_size,:], scaled_no2[train_size:len(scaled_no2),:]"
    ]
@@ -407,8 +408,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape into X=t and Y=t+1\n",
-    "look_back = 1\n",
+    "# Reshape into X=t and Y=t+7\n",
+    "look_back = 7\n",
     "X_train, Y_train = create_dataset(train, look_back)\n",
     "X_test, Y_test = create_dataset(test, look_back)"
    ]
@@ -420,8 +421,8 @@
    "outputs": [],
    "source": [
     "# Reshape input to be [samples, time steps, features]\n",
-    "X_train = X_train.reshape(X_train.shape[0], 1, X_train.shape[1])\n",
-    "X_test = X_test.reshape(X_test.shape[0], 1, X_test.shape[1])"
+    "X_train = X_train.reshape(X_train.shape[0], look_back, -1)\n",
+    "X_test = X_test.reshape(X_test.shape[0], look_back, -1)"
    ]
   },
   {
@@ -432,15 +433,22 @@
    "source": [
     "# Create and fit the LSTM network with Dropout\n",
     "model = Sequential()\n",
-    "model.add(LSTM(50, input_shape=(1, look_back)))\n",
+    "model.add(LSTM(50, input_shape=(look_back, 1), return_sequences=True, \n",
+    "               kernel_regularizer=L1L2(l1=1e-5, l2=1e-4)))\n",
+    "model.add(Dropout(0.3))\n",
+    "model.add(LSTM(25, return_sequences=False, \n",
+    "               kernel_regularizer=L1L2(l1=1e-5, l2=1e-4)))\n",
+    "model.add(Dropout(0.3))\n",
     "model.add(Dense(1))\n",
+    "\n",
+    "# Compile the model\n",
     "model.compile(loss='mean_squared_error', optimizer='adam')\n",
     "\n",
     "# Early stopping\n",
-    "early_stopping = EarlyStopping(monitor='val_loss', patience=5)\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=7)\n",
     "\n",
     "# Train the model\n",
-    "model.fit(X_train, Y_train, epochs=100, batch_size=1, verbose=2, callbacks=[early_stopping], validation_split=0.3)"
+    "model.fit(X_train, Y_train, epochs=100, batch_size=32, verbose=2, callbacks=[early_stopping], validation_split=0.4)"
    ]
   },
   {
@@ -482,7 +490,7 @@
     "- **RMSE (Root Mean Squared Error):** It is a standard way to measure the error of a model in predicting quantitative data.\n",
     "- **MAE (Mean Absolute Error):** It measures the average magnitude of the errors in a set of predictions, without considering their direction.\n",
     "\n",
-    "**Note:**\n",
+    "**Comparing Training and Test Metrics for Model Evaluation:**\n",
     "- **Training RMSE and MAE:** Indicate how well the model fits the training data.\n",
     "- **Test RMSE and MAE:** Show how well the model is expected to perform on unseen data."
    ]
@@ -514,8 +522,12 @@
    "source": [
     "# Plot baseline and predictions\n",
     "plt.figure(figsize=(12,6))\n",
-    "plt.plot(scaler.inverse_transform(scaled_no2))\n",
-    "plt.plot(np.concatenate((train_predict, test_predict)))\n",
+    "plt.plot(scaler.inverse_transform(scaled_no2), label='Actual')\n",
+    "plt.plot(np.concatenate((train_predict, test_predict)), label='Predicted')\n",
+    "plt.legend()\n",
+    "plt.xlabel('Time Step')\n",
+    "plt.ylabel('NO2 Levels')\n",
+    "plt.title('Comparison of Actual and Predicted NO2 Levels')\n",
     "plt.show()"
    ]
   }
