docs: modify documentation in the Jupyter Notebook

--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -490,7 +490,7 @@
     "- **RMSE (Root Mean Squared Error):** It is a standard way to measure the error of a model in predicting quantitative data.\n",
     "- **MAE (Mean Absolute Error):** It measures the average magnitude of the errors in a set of predictions, without considering their direction.\n",
     "\n",
-    "**Comparing Training and Test Metrics for Model Evaluation:**\n",
+    "**Comparing training and test metrics for model evaluation:**\n",
     "- **Training RMSE and MAE:** Indicate how well the model fits the training data.\n",
     "- **Test RMSE and MAE:** Show how well the model is expected to perform on unseen data."
    ]
