docs: modify documentation in the Jupyter Notebook

--- a/MLDLAssignments.ipynb
+++ b/MLDLAssignments.ipynb
@@ -408,8 +408,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape into X=t and Y=t+7\n",
+    "# Define the look_back\n",
     "look_back = 7\n",
+    "\n",
+    "# Reshape into X=t and Y=t+7\n",
     "X_train, Y_train = create_dataset(train, look_back)\n",
     "X_test, Y_test = create_dataset(test, look_back)"
    ]
@@ -420,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape input to be [samples, time steps, features]\n",
+    "# Reshape input as [samples, time steps, features]\n",
     "X_train = X_train.reshape(X_train.shape[0], look_back, -1)\n",
     "X_test = X_test.reshape(X_test.shape[0], look_back, -1)"
    ]
