--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -275,6 +275,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The code below converts the word indices in the train[0] back to words using the word dictionary. In addition, We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '&lt;UNK&gt;' in our data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -312,9 +319,6 @@
     "  - A global average pooling layer is applied to simplify the data by averaging over the sequence.\n",
     "  - There is a dense layer with 16 neurons using ReLU activation.\n",
     "  - The output layer is a single neuron with sigmoid activation, used for binary (positive/negative) classification.\n",
-    "\n",
-    "- **Note:** \n",
-    "  - We've limited our download to the top 10,000 most frequently used words, meaning some less common words in the movie reviews are not included. These words are represented as '&lt;UNK&gt;' in our data.\n",
     "  - As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
     "  - The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
    ]
@@ -402,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The **Receiver Operating Characteristic (ROC)** curve is created using predictions, which leads to two key metrics: False Positive Rate (FPR) and True Positive Rate (TPR). From these, the Area Under the Curve (AUC) is calculated."
+    "- The **Receiver Operating Characteristic (ROC)** curve is created using predictions and leads to two key metrics: False Positive Rate (FPR) on the x-axis and True Positive Rate (TPR) on the y-axis. From these, the Area Under the Curve (AUC) is calculated to measure the model's performance, indicating how well it can distinguish between positive and negative classes."
    ]
   },
   {
