docs: modify documentation in the Jupyter Notebook

--- a/MLBasicsTutorial.ipynb
+++ b/MLBasicsTutorial.ipynb
@@ -317,10 +317,9 @@
     "  - The model uses 25,000 samples each for training and testing.\n",
     "  - It includes an embedding layer for a 10,000-word vocabulary with each word represented by a 16-dimensional vector.\n",
     "  - A global average pooling layer is applied to simplify the data by averaging over the sequence.\n",
-    "  - There is a dense layer with 16 neurons using ReLU activation.\n",
+    "  - There is a dense layer with 16 neurons using ReLU activation. The ReLU (Rectified Linear Unit) activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues.\n",
     "  - The output layer is a single neuron with sigmoid activation, used for binary (positive/negative) classification.\n",
-    "  - As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric.\n",
-    "  - The **ReLU (Rectified Linear Unit)** activation function is used. It outputs the input value if it's positive, and zero if it's negative This introduces non-linearity to the model and helps in mitigating gradient vanishing issues."
+    "  - As for training, it is configured with the **'adam'** optimizer, using **'binary_crossentropy'** as the loss function, and tracking **'accuracy'** as a performance metric."
    ]
   },
   {
